# pico-cw-beacon-drs

./: CMakeLists.txt  LICENSE.md  Makefile.PicoW  README.md  blink.c  blink.pio  build.sh  build_again.sh  message.h  morse.c  morse.h  pio_blink.uf2  pio_blink_pico.uf2  pio_blink_pico_w.uf2  pwm_calculator_wow.c
CW-Beacon-Without-Si5351/: SN74ACT00N.lib  cw-beacon.kicad_prl  cw-beacon.kicad_sch  sym-lib-table
PCB/: ADX.kicad_prl  PCB.kicad_pcb  PCB.kicad_prl  PCB.kicad_pro  PCB.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
PCB/footprints/: ThermalPad_Final.kicad_mod
QRPp-Amplifier-v2/: Driver.kicad_sch  SN74ACT00N.lib  sym-lib-table
QRPp-Amplifier-v3/: Driver.kicad_prl  Driver.kicad_sch  SN74ACT244.kicad_sym  sym-lib-table
WB2CBA-LPF-2022/: Band_MODULE_V1_00.kicad_pcb  Band_MODULE_V1_00.kicad_prl  Band_MODULE_V1_00.kicad_pro  Band_MODULE_V1_00.kicad_sch  Band_MODULE_V1_00.net  Band_MODULE_V1_00.sch  fp-info-cache  fp-lib-table  panelized.kicad_pcb  panelized.kicad_prl  panelized.kicad_pro  sym-lib-table
